--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 </head>
 
 <body>
-    <!-- progress bar -->
+    <!-- container that holds everything -->
     <div class="container">
+        <!-- container for the progress steps -->
         <div class="progress-container">
+            <!-- used for styling purposes -->
             <div class="progress" id="progress"></div>
+            
             <div class="circle active">1</div>
             <div class="circle ">2</div>
             <div class="circle">3</div>
             <div class="circle">4</div>
         </div>
 
-        <!-- buttons -->
+        <!-- prev button disabled by default because you're starting at 0 -->
         <button class="btn" id="prev" disabled>Prev</button>
+        <!-- next button -->
         <button class="btn" id="next">Next</button>
     </div>
     <script src='script.js'></script>
