html: update comment; css: add progress-container

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <!-- container for the progress steps -->
         <div class="progress-container">
-            <!-- used for styling purposes -->
+            <!-- this is the blue line that shows progress bar -->
             <div class="progress" id="progress"></div>
             
             <div class="circle active">1</div>
