css: add progress-bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- container for the progress steps -->
         <div class="progress-container">
             <!-- this is the blue line that shows progress bar -->
-            <div class="progress" id="progress"></div>
+            <div class="progress-bar" id="progress"></div>
             
             <div class="circle active">1</div>
             <div class="circle">2</div>
