--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
+    <script src='script.js'></script>
     <link rel='stylesheet' href='style.css' />
     <title>Progress Steps</title>
 </head>
@@ -28,7 +30,6 @@
         <!-- next button -->
         <button class="btn" id="next">Next</button>
     </div>
-    <script src='script.js'></script>
 </body>
 
 </html>
