enable prev button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <!-- prev button disabled by default because you're starting at 0 -->
-        <button class="btn" id="prev" disabled>Prev</button>
+        <button class="btn" id="prev" disabled="true">Prev</button>
         <!-- next button -->
         <button class="btn" id="next">Next</button>
     </div>
