add header, main

--- a/index.html
+++ b/index.html
@@ -12,24 +12,29 @@
 </head>
 
 <body>
-    <!-- container that holds everything -->
-    <div class="container">
-        <!-- container for the progress steps -->
-        <div class="progress-container">
-            <!-- this is the blue line that shows progress bar -->
-            <div class="progress-bar" id="progress"></div>
-            
-            <div class="circle active">1</div>
-            <div class="circle">2</div>
-            <div class="circle">3</div>
-            <div class="circle">4</div>
-        </div>
+    <header>
+        <h1>What That Button Do 👁👃🏽👁</h1>
+    </header>
+    <main>
+        <!-- container that holds everything -->
+        <div class="container">
+            <!-- container for the progress steps -->
+            <div class="progress-container">
+                <!-- this is the blue line that shows progress bar -->
+                <div class="progress-bar" id="progress"></div>
 
-        <!-- prev button disabled by default because you're starting at 0 -->
-        <button class="btn" id="prev" disabled="true">Prev</button>
-        <!-- next button -->
-        <button class="btn" id="next">Next</button>
-    </div>
+                <div class="circle active">1</div>
+                <div class="circle">2</div>
+                <div class="circle">3</div>
+                <div class="circle">4</div>
+            </div>
+
+            <!-- prev button disabled by default because you're starting at 0 -->
+            <button class="btn" id="prev" disabled="true">Prev</button>
+            <!-- next button -->
+            <button class="btn" id="next">Next</button>
+        </div>
+    </main>
 </body>
 
 </html>
